# temm1e

./: .dockerignore  AGENTIC_DEVELOPER_PROTOCOL.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SETUP_FOR_NEWBIE.md  build.rs  skyclaw.toml  temm1e.toml
.github/workflows/: ci.yml  deps.yml  release.yml
crates/skyclaw-agent/src/: budget.rs  context.rs  lib.rs  llm_classifier.rs  runtime.rs
crates/skyclaw-agent/tests/: runtime_integration.rs
crates/skyclaw-channels/: Cargo.toml
crates/skyclaw-codex-oauth/src/: lib.rs
crates/skyclaw-gateway/src/: dashboard.rs
crates/skyclaw-memory/src/: markdown.rs  sqlite.rs
crates/skyclaw-providers/src/: anthropic.rs  lib.rs  openai_compat.rs
crates/skyclaw-test-utils/src/: lib.rs
crates/skyclaw-tools/: Cargo.toml
crates/skyclaw-tools/src/: file.rs  lib.rs  memory_manage.rs
crates/skyclaw-vault/src/: detector.rs
crates/temm1e-agent/src/: awareness_engine.rs  context.rs  llm_classifier.rs  prompt_optimizer.rs  runtime.rs
crates/temm1e-gateway/src/: setup_tokens.rs
crates/temm1e-gaze/src/: desktop_controller.rs
crates/temm1e-observable/: Cargo.toml
crates/temm1e-observable/src/: file_logger.rs  lib.rs
crates/temm1e-perpetuum/: Cargo.toml
docs/channels/: cli.md  discord.md  slack.md  telegram.md
src/: main.rs
tems_lab/consciousness/: BLOG.md  IMPLEMENTATION.md  RESEARCH_PAPER.md
tems_lab/debug/: AUTO_UPDATE.md
tems_lab/gaze/: RESEARCH_PAPER.md
tems_lab/vigil/: AUTO_UPDATE.md  DESIGN.md  EDGE_CASES.md  IMPLEMENTATION.md  RESEARCH.md  RESEARCH_PAPER.md  ZERO_RISK_MITIGATIONS.md
(+15 files in other folders)
